TASK#003 DESC#关于页面上的一些调整以及部分内容录入

--- a/src/assets/font/font.css
+++ b/src/assets/font/font.css
@@ -4,11 +4,6 @@
 }
 
 @font-face {
-  font-family: '方正隶书简体';
+  font-family: 'FZLSJT';
   src: url("方正隶书简体.ttf");
-}
-
-@font-face {
-  font-family: '禹卫书法隶书简体(新优化版)';
-  src: url("禹卫书法隶书简体(新优化版).ttf");
 }
